ersteller in Angebot hinzugefügt
